# wc-compiler

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  input.rs  main.rs  output.rs  state.rs  time.rs
src/input/: one_or_many.rs
